updates for the examples